--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="icons/logo nova.png">
                 <h3>Quem somos?</h3>
                 <p>Nany Souza, idealizadora da Creative, sempre foi apaixonada por papelaria e acreditou que cada ser é único
-                    e por isso respeita a individualidade de cada um, oferecendo produtos personalizados e diferenciados.
+                    e por isso respeita a individualidade de cada um, oferecendo produtos personalizados e diferenciados. Assim, desde 2009 a Creative inicia a venda online de artigos personalizados.
                 </p>
                 <img id="face-about-us" src="img/nanysouza.png">
                 <h3 style="margin-bottom: 15px;">Nany Souza</h3>
